# virtual-library-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: v1.py
app/books/: models.py  repository.py  router.py  schemas.py  service.py
app/core/: config.py  database.py  exceptions.py
docker/: entrypoint.sh
migrations/: env.py
migrations/versions/: aba52796e57c_create_books_table.py
tests/: conftest.py  test_health.py
tests/integration/: test_books_endpoints.py
tests/unit/: test_book_repository.py  test_book_service.py
